# P2_Esteganografia

./: CMakeLists.txt  README.md  run.sh  uninstall.sh
include/: Codificador.h  Decodificador.h  Esteganografia.h  ImagenPNG.h  TextoABits.h
src/: Codificador.cpp  Decodificador.cpp  Esteganografia.cpp  ImagenPNG.cpp  TextoABits.cpp  main.cpp
src/images/: ejemplo.txt
test/: Test.cpp
test/File_test/: test1.txt  test10.txt  test3.txt  test6.txt  test7.txt  test8.txt  test9.txt
